fix: change footer gap values

--- a/src/widgets/footer/footer.scss
+++ b/src/widgets/footer/footer.scss
@@ -6,13 +6,13 @@
 
     & .desktop-view {
       display: flex;
-      gap: 219px;
+      gap: 20%;
       align-items: flex-start;
       justify-content: flex-start;
 
       & .left {
         display: flex;
-        gap: 311px;
+        gap: 10vw;
       }
 
       // AboutList component styles
